# beam_agent

./: .gitignore  README.md  SINGLE_NODE_MODE_ISSUES.md  beam-node-agent-linux.spec  install.ps1  install.sh  pyproject.toml  setup_phi4.sh  setup_runpod.sh
.claude/: settings.local.json
.github/workflows/: build-release.yml  build.yml
beam_node_agent/: __init__.py  beam_node_agent.py  config.example.yaml  config.py  main.py  node_identity.py  petals_wrapper.py  service.py  tor_manager.py
beam_node_agent/tui/: app.py  dashboard_screen.py
docs/: api-reference.md  configuration.md  node-agent-setup.md  petals-inference-debugging.md  privacy-policy.md  terms-of-service.md  whitepaper.md
scripts/: patch_petals_models.py  qwen3_block_fix.py  renter_quickstart.py
src/routes/: +layout.svelte
